--- a/index.css
+++ b/index.css
@@ -32,7 +32,7 @@
   position: relative;
 }
 
-.header__new-todo {
+.header__new-todo, .todo__edit {
   width: 100%;
   padding: 16px 16px 16px 60px;
   border: none;
@@ -133,7 +133,11 @@
 	background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23bddad5%22%20stroke-width%3D%223%22/%3E%3Cpath%20fill%3D%22%235dc2af%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22/%3E%3C/svg%3E');
 }
 
-.todo__items   li.completed {
+.todo__text {
+  transition: color 0.4s;
+}
+
+.todo__items li.completed {
   color: #d9d9d9;
   text-decoration: line-through;
 }
@@ -244,4 +248,25 @@
 
 .footer__button:hover {
   text-decoration: underline;
+}
+
+.todo__edit {
+  display: none;
+}
+
+.todo__items li.editing {
+	border-bottom: none;
+	padding: 0;
+}
+
+.todo__items li.editing .todo__edit {
+	display: block;
+  border: 1px solid black;
+	width: 506px;
+	padding: 12px 16px;
+	margin: 0 0 0 43px;
+}
+
+.todo__items li.editing .todo__item {
+	display: none;
 }
