--- a/index.css
+++ b/index.css
@@ -9,14 +9,15 @@
   height: 100vh;
   width: 100vw;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  align-items: flex-start;
+  margin-top: 20px;
 }
 
 .content {
   margin: 0 auto;
   font-size: 24px;
 }
+
 .title {
   text-align: center;
   font-size: 100px;
@@ -26,7 +27,8 @@
 
 .form form {
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
-  min-width: 600px;
+  min-width: 500px;
+  max-width: 550px;
 }
 
 .form__header {
@@ -39,8 +41,17 @@
   border: none;
   background: rgba(0, 0, 0, 0.003);
   box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
-  font-style: italic;
+  
   outline: none;
+}
+
+.header__new-todo {
+  font-size: 20px;
+}
+
+.header__new-todo::placeholder {
+  font-style: italic;
+  opacity: 0.1;
 }
 
 .form__main {
@@ -89,6 +100,7 @@
   display: block;
   line-height: 1.2;
   transition: color 0.4s;
+  max-width: 100%;
 }
 
 .todo__remove {
@@ -278,4 +290,40 @@
 
 .hide {
   opacity: 0;
+}
+
+
+
+
+
+
+@media screen and (max-width: 680px) {
+
+  .form form {
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
+    
+    width: 330px;
+    max-width: 330px;
+    min-width: 330px;
+  }
+
+  .header__new-todo {
+    padding: 8px 8px 8px 35px;
+  }
+
+  .todo__toggle-all + label {
+    top: -40px;
+    left: -10px;
+  }
+
+  .footer__filters {
+    gap: 0;
+  }
+
+  .footer__count, .footer__clear {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
 }
