--- a/index.css
+++ b/index.css
@@ -192,10 +192,6 @@
 	display: block;
 }
 
-
-
-
-
 .form__footer {
   position: relative;
   border-top: 1px solid #e6e6e6;
@@ -272,7 +268,7 @@
 }
 
 .todo__items li.editing {
-	border-bottom: none;
+  border-top: 1px solid #e6e6e6;
 	padding: 0;
 }
 
